tests/paczka1/small_fuzzy/79008746.err
Error in line 1: UOYgUTZn3Q S783 91,9
Error in line 2: TrRZbE A500 79,4
Error in line 4: S783 S822 66,1
Error in line 15: TrRZbE S822 113,41
Error in line 8: TrRZbE S822 34,7
